--- a/01-Why-do-we-learn-statistics.qmd
+++ b/01-Why-do-we-learn-statistics.qmd
@@ -1,4 +1,4 @@
-# Why do we learn statistics
+# 為什麼要學習統計
 
 ```{r}
 #| include: FALSE
@@ -17,7 +17,7 @@ $$ $$ <!---- bug...need this here otherwise tables don't render latex in html ou
 
 [^why-do-we-learn-statistics-1]: The quote comes from Auden's 1946 poem Under Which Lyre: A Reactionary Tract for the Times, delivered as part of a commencement address at Harvard University. The history of the poem is kind of interesting: <https://www.harvardmagazine.com/2007/11/a-poets-warning.html>
 
-## On the psychology of statistics
+## 首先談談統計的心理學
 
 To the surprise of many students, statistics is a fairly significant part of a psychological education. To the surprise of no-one, statistics is very rarely the *favourite* part of one's psychological education. After all, if you really loved the idea of doing statistics, you'd probably be enrolled in a statistics class right now, not a psychology class. So, not surprisingly, there's a pretty large proportion of the student base that isn't happy about the fact that psychology has so much statistics in it. In view of this, I thought that the right place to start might be to answer some of the more common questions that people have about stats.
 
@@ -31,7 +31,7 @@ It's a naive question in some ways, but most good questions are. There's a lot o
 
 In fact, come to think of it, this sounds a lot like a psychological question to me, and since I do work in a psychology department, it seems like a good idea to dig a little deeper here. Is it really plausible to think that this "common sense" approach is very trustworthy? Verbal arguments have to be constructed in language, and all languages have biases -- some things are harder to say than others, and not necessarily because they're false (e.g., quantum electrodynamics is a good theory, but hard to explain in words). The instincts of our "gut" aren't designed to solve scientific problems, they're designed to handle day to day inferences -- and given that biological evolution is slower than cultural change, we should say that they're designed to solve the day to day problems for a *different world* than the one we live in. Most fundamentally, reasoning sensibly requires people to engage in "induction", making wise guesses and going beyond the immediate evidence of the senses to make generalisations about the world. If you think that you can do that without being influenced by various distractors, well, I have a bridge in London I'd like to sell you. Heck, as the next section shows, we can't even solve "deductive" problems (ones where no guessing is required) without being influenced by our pre-existing biases.
 
-### The curse of belief bias
+### 信念偏誤的詛咒
 
 People are mostly pretty smart. We're certainly smarter than the other species that we share the planet with (though many people might disagree). Our minds are quite amazing things, and we seem to be capable of the most incredible feats of thought and reason. That doesn't make us perfect though. And among the many things that psychologists have shown over the years is that we really do find it hard to be neutral, to evaluate evidence impartially and without being swayed by pre-existing biases. A good example of this is the **belief bias effect** in logical reasoning: if you ask people to decide whether a particular argument is logically valid (i.e., conclusion would be true if the premises were true), we tend to be influenced by the believability of the conclusion, even when we shouldn't. For instance, here's a valid argument where the conclusion is believable:
 
@@ -61,11 +61,13 @@ And finally, an invalid argument with an unbelievable conclusion:
 
 Now, suppose that people really are perfectly able to set aside their pre-existing biases about what is true and what isn't, and purely evaluate an argument on its logical merits. We'd expect 100% of people to say that the valid arguments are valid, and 0% of people to say that the invalid arguments are valid. So if you ran an experiment looking at this, you'd expect to see data as in @tbl-tab1-1.
 
-```{r}
+
+```{r, results='asis'}
 #| label: tbl-tab1-1
-#| tbl-cap: Validity of arguments
+#| tbl-cap: 判斷有效論證的理論結果
 huxtabs[[1]][[1]] |> set_contents(1, 1, "")
 ```
+
 
 
 If the psychological data looked like this (or even a good approximation to this), we might feel safe in just trusting our gut instincts. That is, it'd be perfectly okay just to let scientists evaluate data based on their common sense, and not bother with all this murky statistics stuff. However, you guys have taken psych classes, and by now you probably know where this is going.
@@ -74,7 +76,7 @@ In a classic study, @Evans1983 ran an experiment looking at exactly this. What t
 
 ```{r}
 #| label: tbl-tab1-2
-#| tbl-cap:  Pre-existing biases and argument validity
+#| tbl-cap:  以既有偏誤判斷論證是否有效的結果
 huxtabs[[1]][[2]] |> set_contents(1, 1, "")
 ```
 
@@ -82,7 +84,7 @@ Not perfect, but that's pretty good. But look what happens when our intuitive fe
 
 ```{r}
 #| label: tbl-tab1-3
-#| tbl-cap:  Intuition and argument validity
+#| tbl-cap:  以直覺判斷有效論證是否有效的結果
 huxtabs[[1]][[3]] |> set_contents(1, 1, "")
 ```
 
@@ -92,13 +94,13 @@ Oh dear, that's not as good. Apparently, when people are presented with a strong
 
 If you think about it, it's not as if these data are horribly damning. Overall, people did do better than chance at compensating for their prior biases, since about 60% of people's judgements were correct (you'd expect 50% by chance). Even so, if you were a professional "evaluator of evidence", and someone came along and offered you a magic tool that improves your chances of making the right decision from 60% to (say) 95%, you'd probably jump at it, right? Of course you would. Thankfully, we actually do have a tool that can do this. But it's not magic, it's statistics. So that's reason #1 why scientists love statistics. It's just too easy for us to "believe what we want to believe". So instead, if we want to "believe in the data", we're going to need a bit of help to keep our personal biases under control. That's what statistics does, it helps keep us honest.
 
-## The cautionary tale of Simpson's paradox
+## 檢核辛普森悖論
 
 The following is a true story (I think!). In 1973, the University of California, Berkeley had some worries about the admissions of students into their postgraduate courses. Specifically, the thing that caused the problem was that the gender breakdown of their admissions (@tbl-tab1-4).
 
 ```{r}
 #| label: tbl-tab1-4
-#| tbl-cap:  Berkeley students by gender
+#| tbl-cap:  1973年伯克萊大學入學學生性別分佈
 huxtabs[[1]][[4]] |> set_contents(1, 1, "")
 ```
 
@@ -110,7 +112,7 @@ Oddly, it's actually sort of true. When people started looking more carefully at
 
 ```{r}
 #| label: tbl-tab1-5
-#| tbl-cap:  Berkeley students by gender for six largest Departments
+#| tbl-cap:  1973年伯克萊大學六個學系入學學生性別分佈
 huxtabs[[1]][[5]] |>
   set_contents(1, 1, "") |>
   set_colspan(1, 2, 2) |>
@@ -126,8 +128,8 @@ Before leaving this topic entirely, I want to point out something else really cr
 ```{r}
 #| label: fig-fig1-1
 #| fig-align: left
-#| fig-width: 90
-#| fig-cap: The Berkeley 1973 college admissions data. This figure plots the admission rate for the 85 departments that had at least one female applicant, as a function of the percentage of applicants that were female. The plot is a redrawing of Figure 1 from @Bickel1975. Circles plot departments with more than 40 applicants; the area of the circle is proportional to the total number of applicants. The crosses plot departments with fewer than 40 applicants
+#| fig-width: 100
+#| fig-cap: 1973年柏克萊大學招生數據，取自 @Bickel1975 的圖1。圖中85個點分別代表至少接受一位女性申請入學的學系，依不分性別錄取率與女性申請入學比例繪圖。圓圈代表申請者超過40人的學系；圓圈面積代表該系申請人數佔全校申請人數的比例。十字代表申請者未達40人的學系。
 knitr::include_graphics("images/fig1-1.png")
 ```
 
@@ -135,39 +137,65 @@ That was the basis for my somewhat glib remarks earlier, but that's not exactly 
 
 In short there are a lot of critical questions that you can't answer with statistics, but the answers to those questions will have a huge impact on how you analyse and interpret data. And this is the reason why you should always think of statistics as a tool to help you learn about your data. No more and no less. It's a powerful tool to that end, but there's no substitute for careful thought.
 
-## Statistics in psychology
+## 心理學中的統計
 
-I hope that the discussion above helped explain why science in general is so focused on statistics. But I'm guessing that you have a lot more questions about what role statistics plays in psychology, and specifically why psychology classes always devote so many lectures to stats. So here's my attempt to answer a few of them...
+希望前面的討論能夠清楚解釋，為何各種科學領域都要使用統計。不過你應該還是會質疑學習心理學為何要學習統計，也會納悶為何許多心理學課程內容都與統計有關。以下是我常聽到來自學生的質疑，以及我的回應...
 
-**Why does psychology have so much statistics?**
+<!---I hope that the discussion above helped explain why science in general is so focused on statistics. But I'm guessing that you have a lot more questions about what role statistics plays in psychology, and specifically why psychology classes always devote so many lectures to stats. So here's my attempt to answer a few of them... --->
 
-To be perfectly honest, there's a few different reasons, some of which are better than others. The most important reason is that psychology is a statistical science. What I mean by that is that the "things" that we study are *people*. Real, complicated, gloriously messy, infuriatingly perverse people. The "things" of physics include objects like electrons, and while there are all sorts of complexities that arise in physics, electrons don't have minds of their own. They don't have opinions, they don't differ from each other in weird and arbitrary ways, they don't get bored in the middle of an experiment, and they don't get angry at the experimenter and then deliberately try to sabotage the data set (not that I've ever done that!). At a fundamental level psychology is harder than physics.[^why-do-we-learn-statistics-5] Basically, we teach statistics to you as psychologists because you need to be better at stats than physicists. There's actually a saying used sometimes in physics, to the effect that "if your experiment needs statistics, you should have done a better experiment". They have the luxury of being able to say that because their objects of study are pathetically simple in comparison to the vast mess that confronts social scientists. And it's not just psychology. Most social sciences are desperately reliant on statistics. Not because we're bad experimenters, but because we've picked a harder problem to solve. We teach you stats because you really, really need it.
+**為什麼學習心理學要學這麼多統計？**
 
-[^why-do-we-learn-statistics-5]: Which might explain why physics is just a teensy bit further advanced as a science than we are.
+<!---**Why does psychology have so much statistics?**--->
 
-**Can't someone else do the statistics?**
+坦白說，有好幾個原因，其中有些原因比較值得談。最重要的原因是心理學是一門統計科學。我的意思是，我們研究的「對象」是人–真實的人是複雜的、美妙的、混亂的、還有偏激的人總令人憤怒。物理學研究的「對象」包括電子等物體，雖然物理學問題也有各種複雜的情況，但是電子沒有自己的思想。它們沒有個人意見，電子之間沒有奇怪而且任意的差異，在實驗中不會感到無聊，不會對實驗者發脾氣，然後故意搞爛實驗（我沒有做過這樣的事情唷！）。從基本面來說，心理學比物理學更難研究[^why-do-we-learn-statistics-5]。所以說，我們以心理學家的身份教你統計學，是因為你需要比物理學家更會掌握統計學。物理學裡有句老生常談，意思是"如果你的實驗要用到統計學，那應該要設計一個更好的實驗"。他們確實有底氣這樣說，因為物理學研究對象的混亂程度與社會科學家面對的相比，是令人妒恨的簡單。而且不只是心理學。大多數社會科學都非常依賴統計學。不是因為心理學家是糟糕的實驗設計者，而是因為心理學面對的多數問題很難只靠實驗設計解決。學習統計學是因為你真的真的需要它。
 
-To some extent, but not completely. It's true that you don't need to become a fully trained statistician just to do psychology, but you do need to reach a certain level of statistical competence. In my view, there's three reasons that every psychological researcher ought to be able to do basic statistics:
+<!---To be perfectly honest, there's a few different reasons, some of which are better than others. The most important reason is that psychology is a statistical science. What I mean by that is that the "things" that we study are *people*. Real, complicated, gloriously messy, infuriatingly perverse people. The "things" of physics include objects like electrons, and while there are all sorts of complexities that arise in physics, electrons don't have minds of their own. They don't have opinions, they don't differ from each other in weird and arbitrary ways, they don't get bored in the middle of an experiment, and they don't get angry at the experimenter and then deliberately try to sabotage the data set (not that I've ever done that!). At a fundamental level psychology is harder than physics.[^why-do-we-learn-statistics-5] Basically, we teach statistics to you as psychologists because you need to be better at stats than physicists. There's actually a saying used sometimes in physics, to the effect that "if your experiment needs statistics, you should have done a better experiment". They have the luxury of being able to say that because their objects of study are pathetically simple in comparison to the vast mess that confronts social scientists. And it's not just psychology. Most social sciences are desperately reliant on statistics. Not because we're bad experimenters, but because we've picked a harder problem to solve. We teach you stats because you really, really need it.--->
 
+[^why-do-we-learn-statistics-5]: 這也許可以解釋為什麼物理學作為一門科學，比心理學略微先進。<!---Which might explain why physics is just a teensy bit further advanced as a science than we are.--->
+
+**不能將統計外包給別人做嗎？**
+
+<!---**Can't someone else do the statistics?**--->
+
+在某些情況是可以這樣，但不能全部都交給別人做。你確實不必要成為一名受過完整訓練的統計學家，也可以研究心理學，但是你需要具備一定的統計能力。在我看來，有三個原因，每個心理學研究者都應該具備基本統計能力：
+
+<!---To some extent, but not completely. It's true that you don't need to become a fully trained statistician just to do psychology, but you do need to reach a certain level of statistical competence. In my view, there's three reasons that every psychological researcher ought to be able to do basic statistics:--->
+
+- 首先是最基本的原因：統計學與研究設計深深交織。如果你想成為設計心理學研究的好手，你至少需要了解統計學的基礎。(譯註：下一章就是談研究設計)
+- 其次，如果你想成為研究心理學的專家，那麼你就需要有能夠讀懂心理學文獻的能力，對吧？但是幾乎每篇心理學論文都有報告統計分析結果。如果你真的想徹底搞懂心理學，你就需要理解報告作者對資料做了什麼分析。也就是說你需要了解一定程度的統計學。
+- 第三，依靠別人做統計學有一個很實際問題：統計分析是件**價格昂貴的工作**。如果你曾經無聊到去查詢澳洲政府制定的大學學費標準，會發現一件有趣的事情：統計學被指定為"國家優先"項目，因此學費比任何其他學科都低得多。這是因為社會各界都需要統計學專家的協助。從心理學研究者的立場來看，我們面對的是供給遠少於需求的賣方市場！幾乎在任何一個心理學研究室都能看到的一場殘酷實況，就是沒有足夠的經費聘請統計專家。因此，經濟現實逼迫心理學家必須自立自強。
+
+除此之外，這些原因不只適用於從事研究的人員。如果你想成為一名應用取向的心理學家，為了掌握最新的研究進展，能夠獨立閱讀充滿各種統計報告的科學文獻也有助職涯發展。
+
+<!---
 -   Firstly, there's the fundamental reason: statistics is deeply intertwined with research design. If you want to be good at designing psychological studies, you need to at the very least understand the basics of stats.
 -   Secondly, if you want to be good at the psychological side of the research, then you need to be able to understand the psychological literature, right? But almost every paper in the psychological literature reports the results of statistical analyses. So if you really want to understand the psychology, you need to be able to understand what other people did with their data. And that means understanding a certain amount of statistics.
 -   Thirdly, there's a big practical problem with being dependent on other people to do all your statistics: statistical analysis is *expensive*. If you ever get bored and want to look up how much the Australian government charges for university fees, you'll notice something interesting: statistics is designated as a "national priority" category, and so the fees are much, much lower than for any other area of study. This is because there's a massive shortage of statisticians out there. So, from your perspective as a psychological researcher, the laws of supply and demand aren't exactly on your side here! As a result, in almost any real life situation where you want to do psychological research, the cruel facts will be that you don't have enough money to afford a statistician. So the economics of the situation mean that you have to be pretty self-sufficient.
 
 Note that a lot of these reasons generalise beyond researchers. If you want to be a practicing psychologist and stay on top of the field, it helps to be able to read the scientific literature, which relies pretty heavily on statistics.
 
-**I don't care about jobs, research, or clinical work. Do I need statistics?**
+--->
 
-Okay, now you're just messing with me. Still, I think it should matter to you too. Statistics should matter to you in the same way that statistics should matter to *everyone*. We live in the 21st century, and data are *everywhere*. Frankly, given the world in which we live these days, a basic knowledge of statistics is pretty damn close to a survival tool! Which is the topic of the next section.
+**我不打算從事與心理學有關的工作、研究或臨床實務。我還需要學嗎？**
 
-## Statistics in everyday life
+<!---**I don't care about jobs, research, or clinical work. Do I need statistics?**--->
+
+好吧，你快要難倒我了。總而言之，我相信統計學對你還是很重要的。對包括你在內的所有現代人類來說，統計學是很重要的基本知識。在21世紀的今天，隨處都是資料。老實說，今天要維持自已活得像現代人，基本的統計知識已經是必備生存工具了！下一節我繼續說給你聽。
+
+<!---Okay, now you're just messing with me. Still, I think it should matter to you too. Statistics should matter to you in the same way that statistics should matter to *everyone*. We live in the 21st century, and data are *everywhere*. Frankly, given the world in which we live these days, a basic knowledge of statistics is pretty damn close to a survival tool! Which is the topic of the next section.--->
+
+## 日常生活中的統計
 
 > *"We are drowning in information,*\
 > *but we are starved for knowledge"*\
 > - Various authors, original probably John Naisbitt
 
-When I started writing up my lecture notes I took the 20 most recent news articles posted to the ABC news website. Of those 20 articles, it turned out that 8 of them involved a discussion of something that I would call a statistical topic and 6 of those made a mistake. The most common error, if you're curious, was failing to report baseline data (e.g., the article mentions that 5% of people in situation X have some characteristic Y, but doesn't say how common the characteristic is for everyone else!). The point I'm trying to make here isn't that journalists are bad at statistics (though they almost always are), it's that a basic knowledge of statistics is very helpful for trying to figure out when someone else is either making a mistake or even lying to you. In fact, one of the biggest things that a knowledge of statistics does to you is cause you to get angry at the newspaper or the internet on a far more frequent basis. You can find a good example of this in @sec-A-real-life-example in @sec-Descriptive-statistics. In later versions of this book I'll try to include more anecdotes along those lines.
+當我撰寫統計學講義時，我從 ABC 新聞網站找了 20 篇當時最新的新聞報導。我判斷其中 8 篇文字內容有提到統計資訊，不過有 6 篇報導內容有誤。若你想知道有什麼錯誤，最常見的錯誤是沒有報告基礎數據（例如，報導提到某個情況能觀察到 5％的人具有某種特徵 ，但沒有說明找了多少人總計出這個百分比！）。我想說的不是記者的統計素養很糟糕（雖然多數記者的統計知識真的很糟糕），而是基本的統計知識真的非常有幫助，可以幫助你瞭解別人表達的錯誤，還有是不是隨便拿些數據製造謠言(**譯注**：本書翻譯工程始於2022年末，有經歷疫情的同學應該對這段時間的各種不實疫情報導有感受。)。事實上，充實統計知識後，為個人帶來的最大一種改變，就是讓你更常對報紙和網路的資訊感到憤怒。之後在 @sec-Descriptive-statistics 的 @sec-A-real-life-example ，你會看到實際例子。本書的後續更新版本，會繼續收集更多類似的錯誤報導。
 
-## There's more to research methods than statistics
+<!---
+When I started writing up my lecture notes I took the 20 most recent news articles posted to the ABC news website. Of those 20 articles, it turned out that 8 of them involved a discussion of something that I would call a statistical topic and 6 of those made a mistake. The most common error, if you're curious, was failing to report baseline data (e.g., the article mentions that 5% of people in situation X have some characteristic Y, but doesn't say how common the characteristic is for everyone else!). The point I'm trying to make here isn't that journalists are bad at statistics (though they almost always are), it's that a basic knowledge of statistics is very helpful for trying to figure out when someone else is either making a mistake or even lying to you. In fact, one of the biggest things that a knowledge of statistics does to you is cause you to get angry at the newspaper or the internet on a far more frequent basis. You can find a good example of this in @sec-A-real-life-example in @sec-Descriptive-statistics. In later versions of this book I'll try to include more anecdotes along those lines.--->
+
+## 統計以外的研究方法
 
 So far, most of what I've talked about is statistics, and so you'd be forgiven for thinking that statistics is all I care about in life. To be fair, you wouldn't be far wrong, but research methodology is a broader concept than statistics. So most research methods courses will cover a lot of topics that relate much more to the pragmatics of research design, and in particular the issues that you encounter when trying to do research with humans. However, about 99% of student fears relate to the statistics part of the course, so I've focused on the stats in this discussion, and hopefully I've convinced you that statistics matters, and more importantly, that it's not to be feared. That being said, it's pretty typical for introductory research methods classes to be very stats-heavy. This is not (usually) because the lecturers are evil people. Quite the contrary, in fact. Introductory classes focus a lot on the statistics because you almost always find yourself needing statistics before you need the other research methods training. Why? Because almost all of your assignments in other classes will rely on statistical training, to a much greater extent than they rely on other methodological tools. It's not common for undergraduate assignments to require you to design your own study from the ground up (in which case you would need to know a lot about research design), but it *is* common for assignments to ask you to analyse and interpret data that were collected in a study that someone else designed (in which case you need statistics). In that sense, from the perspective of allowing you to do well in all your other classes, the statistics is more urgent.
 
