--- a/03-Getting-started-with-jamovi.qmd
+++ b/03-Getting-started-with-jamovi.qmd
@@ -1,4 +1,4 @@
-# Getting started with jamovi
+# 與jamovi的第一次接觸
 
 ```{r}
 #| include: FALSE
@@ -6,7 +6,7 @@ source("header.R")
 ```
 
 > *Robots are nice to work with.*\
-> -- Roger Zelazny[^getting-started-with-jamovi-1]
+> -- 羅傑·澤拉茲尼[^getting-started-with-jamovi-1]
 
 [^getting-started-with-jamovi-1]: Source: Dismal Light (1968).
 
@@ -23,7 +23,7 @@ Those are the main reasons I use jamovi. It's not without its flaws, though. It'
 
 [^getting-started-with-jamovi-2]: As of the first writing this in August 2018. Later versions of this book will use later versions of jamovi.
 
-## Installing jamovi
+## 安裝jamovi
 
 Okay, enough with the sales pitch. Let's get started. Just as with any piece of software, jamovi needs to be installed on a "computer", which is a magical box that does cool things and delivers free ponies. Or something along those lines; I may be confusing computers with the iPad marketing campaigns. Anyway, jamovi is freely distributed online and you can download it from the jamovi homepage, which is: <https://www.jamovi.org/>
 
@@ -31,7 +31,7 @@ At the top of the page, under the heading "Download", you'll see separate links 
 
 [^getting-started-with-jamovi-3]: Although jamovi is updated frequently it doesn't usually make much of a difference for the sort of work we'll do in this book. In fact, during the writing of the book I upgraded several times and it didn't make much difference at all to what is in this book.
 
-### Starting up jamovi
+### 啟動jamovi
 
 One way or another, regardless of what operating system you're using, it's time to open jamovi and get started. When first starting jamovi you will be presented with a user interface which looks something like @fig-fig3-1.
 
@@ -46,7 +46,7 @@ To the left is the spreadsheet view, and to the right is where the results of st
 
 It is possible to simply begin typing values into the jamovi spreadsheet as you would in any other spreadsheet software. Alternatively, existing data sets in the CSV (.csv) file format can be opened in jamovi. Additionally, you can easily import SPSS, SAS, Stata and JASP files directly into jamovi. To open a file select the File tab (three horizontal lines signify this tab) at the top left hand corner, select 'Open' and then choose from the files listed on 'Browse' depending on whether you want to open an example or a file stored on your computer.
 
-## Analyses
+## 分析模組
 
 Analyses can be selected from the analysis ribbon or menu along the top. Selecting an analysis will present an 'options panel' for that particular analysis, allowing you to assign different variables to different parts of the analysis, and select different options. At the same time, the results for the analysis will appear in the right 'Results panel' and will update in real-time as you make changes to the options.
 
@@ -54,11 +54,11 @@ When you have the analysis set up correctly you can dismiss the analysis options
 
 If you decide you no longer need a particular analysis, you can remove it with the results context menu. Right-clicking on the analysis results will bring up a menu and by selecting 'Analysis' and then 'Remove' the analysis can be removed. But more on this later. First, let's take a more detailed look at the spreadsheet view.
 
-## The spreadsheet
+## 資料試算表
 
 In jamovi data is represented in a spreadsheet with each column representing a 'variable' and each row representing a 'case' or 'participant'.
 
-### Variables
+### 變項
 
 The most commonly used variables in jamovi are 'Data Variables', these variables simply contain data either loaded from a data file, or 'typed in' by the user. Data variables can be one of several measurement levels (@fig-fig3-2).
 
@@ -85,9 +85,9 @@ The variable editor can be opened by selecting 'Setup' from the data tab or by d
 
 New variables can be inserted or appended to the data set using the 'add' button from the data ribbon. The 'add' button also allows the addition of computed variables.
 
-### Computed variables
+### 自訂計算變項
 
-Computed Variables are those which take their value by performing a computation on other variables. Computed Variables can be used for a range of purposes, including log transforms, z-scores, sum-scores, negative scoring and means.
+自訂計算變項(Computed Variables) are those which take their value by performing a computation on other variables. Computed Variables can be used for a range of purposes, including log transforms, z-scores, sum-scores, negative scoring and means.
 
 Computed variables can be added to the data set with the 'add' button available on the data tab. This will produce a formula box where you can specify the formula. The usual arithmetic operators are available. Some examples of formulas are:
 
@@ -107,21 +107,21 @@ In order, these are the sum of A and B, a log (base 10) transform of len, the me
 knitr::include_graphics("images/fig3-3.png")
 ```
 
-#### V-functions
+#### 水平計算函式
 
-Several functions are already available in jamovi and available from the drop down box labelled fx. A number of functions appear in pairs, one prefixed with a V and the other not. V functions perform their calculation on a variable as a whole, where as non-V functions perform their calculation row by row. For example, MEAN(A, B) will produce the mean of A and B for each row. Where as VMEAN(A) gives the mean of all the values in A.
+Several functions are already available in jamovi and available from the drop down box labelled fx. A number of functions appear in pairs, one prefixed with a V and the other not. 水平計算函式(V functions) perform their calculation on a variable as a whole, where as non-V functions perform their calculation row by row. For example, MEAN(A, B) will produce the mean of A and B for each row. Where as VMEAN(A) gives the mean of all the values in A.
 
-### Copy and Paste
+### 複製貼上
 
 jamovi produces nice American Psychological Association (APA) formatted tables and attractive plots. It is often useful to be able to copy and paste these, perhaps into a Word document, or into an email to a colleague. To copy results right click on the object of interest and from the menu select exactly what you want to copy. The menu allows you to choose to copy only the image or the entire analysis. Selecting "copy" copies the content to the clipboard and this can be pasted into other programs in the usual way. You can practice this later on when we do some analyses.
 
-### Syntax mode
+### 程式碼模式
 
-jamovi also provides an "R Syntax Mode". In this mode jamovi produces equivalent R code for each analysis. To change to syntax mode, select the Application menu to the top right of jamovi (a button with three vertical dots) and click the "Syntax mode" checkbox there. You can turn off syntax mode by clicking this a second time.
+jamovi also provides an "R程式碼模式"(R Syntax Mode)。 In this mode jamovi produces equivalent R code for each analysis. To change to syntax mode, select the Application menu to the top right of jamovi (a button with three vertical dots) and click the "Syntax mode" checkbox there. You can turn off syntax mode by clicking this a second time.
 
 In syntax mode analyses continue to operate as before but now they produce R syntax, and 'ascii output' like an R session. Like all results objects in jamovi, you can right click on these items (including the R syntax) and copy and paste them, for example into an R session. At present, the provided R syntax does not include the data import step and so this must be performed manually in R. There are many resources explaining how to import data into R and if you are interested we recommend you take a look at these; just search on the interweb.
 
-## Loading data in jamovi
+## 載入資料檔案
 
 There are several different types of files that are likely to be relevant to us when doing data analysis. There are two in particular that are especially important from the perspective of this book:
 
@@ -131,7 +131,7 @@ There are several different types of files that are likely to be relevant to us 
 
 There are also several other kinds of data file that you might want to import into jamovi. For instance, you might want to open Microsoft Excel spreadsheets (.xls files), or data files that have been saved in the native file formats for other statistics software, such as SPSS or SAS. Whichever file formats you are using, it's a good idea to create a folder or folders especially for your jamovi data sets and analyses and to make sure you keep these backed up regularly.
 
-### Importing data from csv files
+### 匯入csv格式資料檔
 
 One quite commonly used data format is the humble "comma separated value" file, also called a csv file, and usually bearing the file extension .csv. csv files are just plain old-fashioned text files and what they store is basically just a table of data. This is illustrated in @fig-fig3-4, which shows a file called booksales.csv that I've created. As you can see, each row represents the book sales data for one month. The first row doesn't contain actual data though, it has the names of the variables.
 
@@ -157,11 +157,11 @@ There are a few things that you can check to make sure that the data gets import
 -   Decimal. What character is used to specify the decimal point? In English speaking countries this is almost always a period (i.e., .). That's not universally true though, many European countries use a comma.
 -   Quote. What character is used to denote a block of text? That's usually going to be a double quote mark ("). It is for the booksales.csv file.
 
-## Importing unusual data files
+## 匯入不常見格式的資料檔
 
 Throughout this book I've assumed that your data are stored as a jamovi .omv file or as a "properly" formatted csv file. However, in real life that's not a terribly plausible assumption to make so I'd better talk about some of the other possibilities that you might run into.
 
-### Loading data from text files
+### 資料檔是純文字格式
 
 The first thing I should point out is that if your data are saved as a text file but aren't quite in the proper csv format then there's still a pretty good chance that jamovi will be able to open it. You just need to try it and see if it works. Sometimes though you will need to change some of the formatting. The ones that I've often found myself needing to change are:
 
@@ -173,7 +173,7 @@ The first thing I should point out is that if your data are saved as a text file
 
 [^getting-started-with-jamovi-4]: You can change the default value for missing values in jamovi from the top right menu (three vertical dots), but this only works at the time of importing data files into jamovi. The default missing value in the dataset should not be a valid number associated with any of the variables, e.g. you could use -9999 as this is unlikely to be a valid value.
 
-### Loading data from SPSS (and other statistics packages)
+### 套裝軟體專用格式(如SPSS)
 
 The commands listed above are the main ones we'll need for data files in this book. But in real life we have many more possibilities. For example, you might want to read data files in from other statistics programs. Since SPSS is probably the most widely used statistics package in psychology, it's worth mentioning that jamovi can also import SPSS data files (file extension .sav). Just follow the instructions above for how to open a csv file, but this time navigate to the .sav file you want to import. For SPSS files, jamovi will regard all values as missing if they are regarded as "system missing" files in SPSS. The 'Default missings' value does not seem to work as expected when importing SPSS files, so be aware of this - you might need another step: import the SPSS file into jamovi, then export as a csv file before re-opening in jamovi.[^getting-started-with-jamovi-5]
 
@@ -181,17 +181,17 @@ The commands listed above are the main ones we'll need for data files in this bo
 
 And that's pretty much it, at least as far as SPSS goes. As far as other statistical software goes, jamovi can also directly open / import SAS and STATA files.
 
-### Loading Excel files
+### 微軟Excel資料格式
 
 A different problem is posed by Excel files. Despite years of yelling at people for sending data to me encoded in a proprietary data format, I get sent a lot of Excel files. The way to handle Excel files is to open them up first in Excel or another spreadsheet programme that can handle Excel files, and then export the data as a csv file before opening / importing the csv file into jamovi.
 
-## Changing data from one level to another {#sec-Changing-data-from-one-level-to-another}
+## 更動資料變項性質 {#sec-Changing-data-from-one-level-to-another}
 
 Sometimes you want to change the variable level. This can happen for all sorts of reasons. Sometimes when you import data from files, it can come to you in the wrong format. Numbers sometimes get imported as nominal, text values. Dates may get imported as text. ParticipantID values can sometimes be read as continuous: nominal values can sometimes be read as ordinal or even continuous. There's a good chance that sometimes you'll want to convert a variable from one measurement level into another one. Or, to use the correct term, you want to **coerce** the variable from one class into another.
 
 Earlier we saw how to specify different variable levels, and if you want to change a variable's measurement level then you can do this in the jamovi data view for that variable. Just click the check box for the measurement level you want - continuous, ordinal, or nominal.
 
-## Installing add-on modules into jamovi
+## 安裝jamovi擴充模組
 
 A really great feature of jamovi is the ability to install add-on modules from the jamovi library. These add-on modules have been developed by the jamovi community, i.e., jamovi users and developers who have created special software add-ons that do other, usually more advanced, analyses that go beyond the capabilities of the base jamovi program.
 
@@ -204,7 +204,7 @@ To install add-on modules, just click on the large $+$ in the top right of the j
 knitr::include_graphics("images/fig3-6.png")
 ```
 
-## Quitting jamovi
+## 關閉jamovi
 
 There's one last thing I should cover in this chapter: how to quit jamovi. It's not hard, just close the program the same way you would any other program. However, what you might want to do before you quit is save your work! There are two parts to this: saving any changes to the data set, and saving the analyses that you ran.
 
@@ -212,7 +212,7 @@ It is good practice to save any changes to the data set as a *new* data set. Tha
 
 Alternatively, you can save *both* the changed data and any analyses you have undertaken by saving as a jamovi file. To do this, from the main jamovi menu select 'Save as' and type in a file name for this 'jamovi file (.omv)'. Remember to save the file in a location where you can find it again later. I usually create a new folder for specific data sets and analyses.
 
-## Summary
+## 本章小節
 
 Every book that tries to teach a new statistical software program to novices has to cover roughly the same topics, and in roughly the same order. Ours is no exception, and so in the grand tradition of doing it just the same way everyone else did it, this chapter covered the following topics:
 
