--- a/04-Descriptive-statistics.qmd
+++ b/04-Descriptive-statistics.qmd
@@ -1,4 +1,4 @@
-# Descriptive statistics {#sec-Descriptive-statistics}
+# 描述統計 {#sec-Descriptive-statistics}
 
 ```{r}
 #| include: FALSE
@@ -29,11 +29,11 @@ This output doesn't make it easy to get a sense of what the data are actually sa
 knitr::include_graphics("images/fig4-2.png")
 ```
 
-## Measures of central tendency
+## 集中量數
 
 Drawing pictures of the data, as I did in @fig-fig4-2, is an excellent way to convey the "gist" of what the data is trying to tell you. It's often extremely useful to try to condense the data into a few simple "summary" statistics. In most situations, the first thing that you'll want to calculate is a measure of **central tendency**. That is, you'd like to know something about where the "average" or "middle" of your data lies. The three most commonly used measures are the mean, median and mode. I'll explain each of these in turn, and then discuss when each of them is useful.
 
-### The mean
+### 平均值
 
 The **mean** of a set of observations is just a normal, old-fashioned average. Add all of the values up, and then divide by the total number of values. The first five AFL winning margins were 56, 31, 56, 8 and 32, so the mean of these observations is just:
 
@@ -54,7 +54,7 @@ huxtabs[[4]][[1]]
 
 [^04-descriptive-statistics-2]: Okay, now let's try to write a formula for the mean. By tradition, we use $\bar{X}$ as the notation for the mean. So the calculation for the mean could be expressed using the following formula: $$\bar{X}=\frac{X_1 + X_2 ... + X_{N-1} + X_{N}}{N}$$ This formula is entirely correct but it's terribly long, so we make use of the **summation symbol** $\sum$ to shorten it.$^a$ If I want to add up the first five observations I could write out the sum the long way, $X_1 + X_2 + X_3 + X_4 + X_5$ or I could use the summation symbol to shorten it to this: $$\sum_{i=1}^{5} X_i$$ Taken literally, this could be read as "the sum, taken over all i values from 1 to 5, of the value $X_i$". But basically what it means is "add up the first five observations". In any case, we can use this notation to write out the formula for the mean, which looks like this: $$\bar{X}=\frac{1}{N}\sum_{i=1}^{N}X_i$$ In all honesty, I can't imagine that all this mathematical notation helps clarify the concept of the mean at all. In fact, it's really just a fancy way of writing out the same thing I said in words: add all the values up and then divide by the total number of items. However, that's not really the reason I went into all that detail. My goal was to try to make sure that everyone reading this book is clear on the notation that we'll be using throughout the book: $\bar{X}$ for the mean, $\sum$ for the idea of summation, $X_i$ for the ith observation, and $N$ for the total number of observations. We're going to be re-using these symbols a fair bit so it's important that you understand them well enough to be able to "read" the equations, and to be able to see that it's just saying "add up lots of things and then divide by another thing". <br />---<br />$^a$ *The choice to use* $\sum$ to denote summation isn't arbitrary. It's the Greek upper case letter sigma, which is the analogue of the letter $S$ in that alphabet. Similarly, there's an equivalent symbol used to denote the multiplication of lots of numbers, because multiplications are also called "products" we use the $\prod$ symbol for this (the Greek upper case pi, which is the analogue of the letter $P$.
 
-### Calculating the mean in jamovi
+### 平均值計算示範
 
 Okay, that's the maths. So how do we get the magic computing box to do the work for us? When the number of observations starts to become large it's much easier to do these sorts of calculations using a computer. To calculate the mean using all the data we can use jamovi. The first step is to click on the 'Exploration' button and then click 'Descriptives'. Then you can highlight the afl.margins variable and click the 'right arrow' to move it across into the 'Variables box'. As soon as you do that a Table appears on the right hand side of the screen containing default 'Descriptives' information; see @fig-fig4-3.
 
@@ -68,7 +68,7 @@ knitr::include_graphics("images/fig4-3.png")
 
 As you can see in @fig-fig4-3, the mean value for the afl.margins variable is 35.30. Other information presented includes the total number of observations (N=176), the number of missing values (none), and the Median, Minimum and Maximum values for the variable.
 
-### The median
+### 中位數
 
 The second measure of central tendency that people use a lot is the **median**, and it's even easier to describe than the mean. The median of a set of observations is just the middle value. As before let's imagine we were interested only in the first 5 AFL winning margins: $56$, $31$, $56$, $8$ and $32$. To figure out the median we sort these numbers into ascending order:
 
@@ -80,7 +80,7 @@ From inspection, it's obvious that the median value of these 5 observations is 3
 
 and there are two middle numbers, 31 and 32. The median is defined as the average of those two numbers, which is of course 31.5. As before, it's very tedious to do this by hand when you've got lots of numbers. In real life, of course, no-one actually calculates the median by sorting the data and then looking for the middle value. In real life we use a computer to do the heavy lifting for us, and jamovi has provided us with a Median value of 30.50 for the afl.margins variable (@fig-fig4-3).
 
-### Mean or median? What's the difference?
+### 應該要計算平均值還是中位數?
 
 Knowing how to calculate means and medians is only a part of the story. You also need to understand what each one is saying about the data, and what that implies for when you should use each one. This is illustrated in @fig-fig4-4. The mean is kind of like the "centre of gravity" of the data set, whereas the median is the "middle value" in the data. What this implies, as far as which one you should use, depends a little on what type of data you've got and what you're trying to achieve. As a rough guide:
 
@@ -98,7 +98,7 @@ Let's expand on that last part a little. One consequence is that there are syste
 knitr::include_graphics("images/fig4-11.png")
 ```
 
-### A real life example {#sec-A-real-life-example}
+### 真實案例 {#sec-A-real-life-example}
 
 To try to get a sense of why you need to pay attention to the differences between the mean and the median let's consider a real life example. Since I tend to mock journalists for their poor scientific and statistical knowledge, I should give credit where credit is due. This is an excellent article on the ABC news website[^04-descriptive-statistics-3] from 24 September, 2010:
 
@@ -124,7 +124,7 @@ Couldn't have put it better myself. The way that Demographia calculated the rati
 
 My, my.
 
-### Mode {#sec-Mode}
+### 眾數 {#sec-Mode}
 
 The mode of a sample is very simple. It is the value that occurs most frequently. We can illustrate the mode using a different AFL variable: who has played in the most finals? Open the aflsmall finalists file and take a look at the afl.finalists variable, see @fig-fig4-5. This variable contains the names of all 400 teams that played in all 200 finals matches played during the period 1987 to 2010.
 
@@ -158,11 +158,11 @@ One last point to make regarding the mode. Whilst the mode is most often calcula
 knitr::include_graphics("images/fig4-7.png")
 ```
 
-## Measures of variability {#sec-Measures-of-variability}
+## 變異量數 {#sec-Measures-of-variability}
 
 The statistics that we've discussed so far all relate to central tendency. That is, they all talk about which values are "in the middle" or "popular" in the data. However, central tendency is not the only type of summary statistic that we want to calculate. The second thing that we really want is a measure of the **variability** of the data. That is, how "spread out" are the data? How "far" away from the mean or median do the observed values tend to be? For now, let's assume that the data are interval or ratio scale, and we'll continue to use the afl.margins data. We'll use this data to discuss several different measures of spread, each with different strengths and weaknesses.
 
-### Range
+### 全距
 
 The statistics that we've discussed so far all relate to central tendency. That is, they all talk about which values are "in the middle" or "popular" in the data. However, central tendency is not the only type of summary statistic that we want to calculate. The second thing that we really want is a measure of the **variability** of the data. That is, how "spread out" are the data? How "far" away from the mean or median do the observed values tend to be? For now, let's assume that the data are interval or ratio scale, and we'll continue to use the afl.margins data. We'll use this data to discuss several different measures of spread, each with different strengths and weaknesses.
 
@@ -172,9 +172,9 @@ The **range** of a variable is very simple. It's the biggest value minus the sma
 
 it is clear that the range is not robust. This variable has a range of 110 but if the outlier were removed we would have a range of only 8.
 
-### Interquartile range
+### 四分位數間距
 
-The **interquartile range** (IQR) is like the range, but instead of the difference between the biggest and smallest value the difference between the 25th percentile and the 75th percentile is taken. If you don't already know what a **percentile** is, the 10th percentile of a data set is the smallest number x such that 10% of the data is less than x. In fact, we've already come across the idea. The median of a data set is its 50th percentile! In jamovi you can easily specify the 25th, 50th and 75th percentiles by clicking the checkbox 'Quartiles' in the 'Exploration' - 'Descriptives' - 'Statistics' screen.
+The **四分位數間距(interquartile range)** (IQR) is like the range, but instead of the difference between the biggest and smallest value the difference between the 25th percentile and the 75th percentile is taken. If you don't already know what a **percentile** is, the 10th percentile of a data set is the smallest number x such that 10% of the data is less than x. In fact, we've already come across the idea. The median of a data set is its 50th percentile! In jamovi you can easily specify the 25th, 50th and 75th percentiles by clicking the checkbox 'Quartiles' in the 'Exploration' - 'Descriptives' - 'Statistics' screen.
 
 And not surprisingly, in @fig-fig4-8 the 50th percentile is the same as the median value. And, by noting that $50.50 - 12.75 = 37.75$, we can see that the interquartile range for the 2010 AFL winning margins data is 37.75. While it's obvious how to interpret the range it's a little less obvious how to interpret the IQR. The simplest way to think about it is like this: the interquartile range is the range spanned by the "middle half" of the data. That is, one quarter of the data falls below the 25th percentile and one quarter of the data is above the 75th percentile, leaving the "middle half" of the data lying in between the two. And the IQR is the range covered by that middle half.
 
@@ -186,11 +186,11 @@ And not surprisingly, in @fig-fig4-8 the 50th percentile is the same as the medi
 knitr::include_graphics("images/fig4-8.png")
 ```
 
-### Mean absolute deviation
+### 平均絕對差
 
 The two measures we've looked at so far, the range and the interquartile range, both rely on the idea that we can measure the spread of the data by looking at the percentiles of the data. However, this isn't the only way to think about the problem. A different approach is to select a meaningful reference point (usually the mean or the median) and then report the "typical" deviations from that reference point. What do we mean by "typical" deviation? Usually, this is the mean or median value of these deviations. In practice, this leads to two different measures: the "mean absolute deviation" (from the mean) and the "median absolute deviation" (from the median). From what I've read, the measure based on the median seems to be used in statistics and does seem to be the better of the two. But to be honest I don't think I've seen it used much in psychology. The measure based on the mean does occasionally show up in psychology though. In this section I'll talk about the first one, and I'll come back to talk about the second one later.
 
-Since the previous paragraph might sound a little abstract, let's go through the **mean absolute deviation** from the mean a little more slowly. One useful thing about this measure is that the name actually tells you exactly how to calculate it. Let's think about our AFL winning margins data, and once again we'll start by pretending that there are only 5 games in total, with winning margins of 56, 31, 56, 8 and 32. Since our calculations rely on an examination of the deviation from some reference point (in this case the mean), the first thing we need to calculate is the mean, $\bar{X}$. For these five observations, our mean is $\bar{X} = 36.6$. The next step is to convert each of our observations $X_i$ into a deviation score. We do this by calculating the difference between the observation $X_i$ and the mean $\bar{X}$. That is, the deviation score is defined to be $X_i - \bar{X}$. For the first observation in our sample, this is equal to $56 - 36.6 = 19.4$. Okay, that's simple enough. The next step in the process is to convert these deviations to absolute deviations, and we do this by converting any negative values to positive ones. Mathematically, we would denote the absolute value of $-3$ as $\mid -3 \mid$, and so we say that $\mid -3 \mid = 3$. We use the absolute value here because we don't really care whether the value is higher than the mean or lower than the mean, we're just interested in how close it is to the mean. To help make this process as obvious as possible, @tbl-tab4-2 shows these calculations for all five observations.
+Since the previous paragraph might sound a little abstract, let's go through the **平均絕對差(mean absolute deviation)** from the mean a little more slowly. One useful thing about this measure is that the name actually tells you exactly how to calculate it. Let's think about our AFL winning margins data, and once again we'll start by pretending that there are only 5 games in total, with winning margins of 56, 31, 56, 8 and 32. Since our calculations rely on an examination of the deviation from some reference point (in this case the mean), the first thing we need to calculate is the mean, $\bar{X}$. For these five observations, our mean is $\bar{X} = 36.6$. The next step is to convert each of our observations $X_i$ into a deviation score. We do this by calculating the difference between the observation $X_i$ and the mean $\bar{X}$. That is, the deviation score is defined to be $X_i - \bar{X}$. For the first observation in our sample, this is equal to $56 - 36.6 = 19.4$. Okay, that's simple enough. The next step in the process is to convert these deviations to absolute deviations, and we do this by converting any negative values to positive ones. Mathematically, we would denote the absolute value of $-3$ as $\mid -3 \mid$, and so we say that $\mid -3 \mid = 3$. We use the absolute value here because we don't really care whether the value is higher than the mean or lower than the mean, we're just interested in how close it is to the mean. To help make this process as obvious as possible, @tbl-tab4-2 shows these calculations for all five observations.
 
 ```{r}
 #| label: tbl-tab4-2
@@ -210,9 +210,9 @@ And we're done. The mean absolute deviation for these five scores is 15.52.
 
 [^04-descriptive-statistics-4]: However, whilst our calculations for this little example are at an end, we do have a couple of things left to talk about. First, we should really try to write down a proper mathematical formula. But in order do to this I need some mathematical notation to refer to the mean absolute deviation. Irritatingly, "mean absolute deviation" and "median absolute deviation" have the same acronym (MAD), which leads to a certain amount of ambiguity so I'd better come up with something different for the mean absolute deviation. Sigh. What I'll do is use AAD instead, short for average absolute deviation. Now that we have some unambiguous notation, here's the formula that describes what we just calculated:$$AAD(X) =\frac{1}{N} \sum_{i=1}^{N} \mid X_i - \bar{X} \mid = 15.52$$
 
-### Variance
+### 變異數
 
-Although the average absolute deviation measure has its uses, it's not the best measure of variability to use. From a purely mathematical perspective there are some solid reasons to prefer squared deviations rather than absolute deviations. If we do that we obtain a measure called the **variance**, which has a lot of really nice statistical properties that I'm going to ignore,[^04-descriptive-statistics-5] and one massive psychological flaw that I'm going to make a big deal out of in a moment. The variance of a data set $X$ is sometimes written as Var( $X$ ), but it's more commonly denoted $s^2$ (the reason for this will become clearer shortly).
+Although the average absolute deviation measure has its uses, it's not the best measure of variability to use. From a purely mathematical perspective there are some solid reasons to prefer squared deviations rather than absolute deviations. If we do that we obtain a measure called the **變異數(variance)**, which has a lot of really nice statistical properties that I'm going to ignore,[^04-descriptive-statistics-5] and one massive psychological flaw that I'm going to make a big deal out of in a moment. The variance of a data set $X$ is sometimes written as Var( $X$ ), but it's more commonly denoted $s^2$ (the reason for this will become clearer shortly).
 
 [^04-descriptive-statistics-5]: Well, I will very briefly mention the one that I think is coolest, for a very particular definition of "cool", that is. Variances are additive. Here's what that means. Suppose I have two variables $X$ and $Y$ , whose variances are $Var(X)$ and $Var(Y)$ respectively. Now imagine I want to define a new variable Z that is the sum of the two, $Z = X + Y$ . As it turns out, the variance of $Z$ is equal to $Var(X) + Var(Y)$. This is a very useful property, but it's not true of the other measures that I talk about in this section.
 
@@ -251,9 +251,9 @@ So that's the *what*. The real question is why jamovi is dividing by $N - 1$ and
 
 Okay, one last thing. This section so far has read a bit like a mystery novel. I've shown you how to calculate the variance, described the weird "$N - 1$" thing that jamovi does and hinted at the reason why it's there, but I haven't mentioned the single most important thing. How do you interpret the variance? Descriptive statistics are supposed to describe things, after all, and right now the variance is really just a gibberish number. Unfortunately, the reason why I haven't given you the human-friendly interpretation of the variance is that there really isn't one. This is the most serious problem with the variance. Although it has some elegant mathematical properties that suggest that it really is a fundamental quantity for expressing variation, it's completely useless if you want to communicate with an actual human. Variances are completely uninterpretable in terms of the original variable! All the numbers have been squared and they don't mean anything anymore. This is a huge issue. For instance, according to @tbl-tab4-3, the margin in game 1 was "376.36 points-squared higher than the average margin". This is *exactly* as stupid as it sounds, and so when we calculate a variance of $324.64$ we're in the same situation. I've watched a lot of footy games, and at no time has anyone ever referred to "points squared". It's not a real unit of measurement, and since the variance is expressed in terms of this gibberish unit, it is totally meaningless to a human.
 
-### Standard deviation {#sec-Standard-deviation}
+### 標準差 {#sec-Standard-deviation}
 
-Okay, suppose that you like the idea of using the variance because of those nice mathematical properties that I haven't talked about, but since you're a human and not a robot you'd like to have a measure that is expressed in the same units as the data itself (i.e., points, not points squared). What should you do? The solution to the problem is obvious! Take the square root of the variance, known as the **standard deviation**, also called the "root mean squared deviation", or RMSD. This solves our problem fairly neatly. Whilst nobody has a clue what "a variance of 324.68 points-squared" really means, it's much easier to understand "a standard deviation of 18.01 points" since it's expressed in the original units. It is traditional to refer to the standard deviation of a sample of data as s, though "sd" and "std dev." are also used at times.
+Okay, suppose that you like the idea of using the variance because of those nice mathematical properties that I haven't talked about, but since you're a human and not a robot you'd like to have a measure that is expressed in the same units as the data itself (i.e., points, not points squared). What should you do? The solution to the problem is obvious! Take the square root of the variance, known as the **標準差(standard deviation)**, also called the "root mean squared deviation", or RMSD. This solves our problem fairly neatly. Whilst nobody has a clue what "a variance of 324.68 points-squared" really means, it's much easier to understand "a standard deviation of 18.01 points" since it's expressed in the original units. It is traditional to refer to the standard deviation of a sample of data as s, though "sd" and "std dev." are also used at times.
 
 [Additional technical detail[^04-descriptive-statistics-9]]
 
@@ -267,7 +267,7 @@ However, as you might have guessed from our discussion of the variance, what jam
 
 Interpreting standard deviations is slightly more complex. Because the standard deviation is derived from the variance, and the variance is a quantity that has little to no meaning that makes sense to us humans, the standard deviation doesn't have a simple interpretation. As a consequence, most of us just rely on a simple rule of thumb. In general, you should expect 68% of the data to fall within 1 standard deviation of the mean, 95% of the data to fall within 2 standard deviation of the mean, and 99.7% of the data to fall within 3 standard deviations of the mean. This rule tends to work pretty well most of the time, but it's not exact. It's actually calculated based on an assumption that the histogram is symmetric and "bell shaped". As you can tell from looking at the AFL winning margins histogram in @fig-fig4-2, this isn't exactly true of our data! Even so, the rule is approximately correct. As it turns out, 65.3% of the AFL margins data fall within one standard deviation of the mean. This is shown visually in @fig-fig4-10.
 
-### Which measure to use?
+### 應該用那種量數?
 
 We've discussed quite a few measures of spread: range, IQR, mean absolute deviation, variance and standard deviation; and hinted at their strengths and weaknesses. Here's a quick summary:
 
@@ -287,7 +287,7 @@ In short, the IQR and the standard deviation are easily the two most common meas
 knitr::include_graphics("images/fig4-10.png")
 ```
 
-## Skew and kurtosis
+## 偏態與峰度
 
 There are two more descriptive statistics that you will sometimes see reported in the psychological literature: skew and kurtosis. In practice, neither one is used anywhere near as frequently as the measures of central tendency and variability that we've been talking about. Skew is pretty important, so you do see it mentioned a fair bit, but I've actually never seen kurtosis reported in a scientific article to date.
 
@@ -299,7 +299,7 @@ There are two more descriptive statistics that you will sometimes see reported i
 knitr::include_graphics("images/fig4-11.png")
 ```
 
-Since it's the more interesting of the two, let's start by talking about the **skewness**. Skewness is basically a measure of asymmetry and the easiest way to explain it is by drawing some pictures. As @fig-fig4-11 illustrates, if the data tend to have a lot of extreme small values (i.e., the lower tail is "longer" than the upper tail) and not so many extremely large values (left panel) then we say that the data are *negatively skewed*. On the other hand, if there are more extremely large values than extremely small ones (right panel) we say that the data are positively skewed. That's the qualitative idea behind skewness. If there are relatively more values that are far greater than the mean, the distribution is positively skewed or right skewed, with a tail stretching to the right. Negative or left skew is the opposite. A symmetric distribution has a skewness of 0. The skewness value for a positively skewed distribution is positive, and a negative value for a negatively skewed distribution.
+Since it's the more interesting of the two, let's start by talking about the **偏態(skewness)**. Skewness is basically a measure of asymmetry and the easiest way to explain it is by drawing some pictures. As @fig-fig4-11 illustrates, if the data tend to have a lot of extreme small values (i.e., the lower tail is "longer" than the upper tail) and not so many extremely large values (left panel) then we say that the data are *negatively skewed*. On the other hand, if there are more extremely large values than extremely small ones (right panel) we say that the data are positively skewed. That's the qualitative idea behind skewness. If there are relatively more values that are far greater than the mean, the distribution is positively skewed or right skewed, with a tail stretching to the right. Negative or left skew is the opposite. A symmetric distribution has a skewness of 0. The skewness value for a positively skewed distribution is positive, and a negative value for a negatively skewed distribution.
 
 [Additional technical detail[^04-descriptive-statistics-11]]
 
@@ -331,7 +331,7 @@ huxtabs[[4]][[4]]
 
 More to the point, jamovi has a check box for kurtosis just below the check box for skewness, and this gives a value for kurtosis of $0.101$ with a standard error of $0.364$. This means that the AFL winning margins data has only a small kurtosis, which is ok.
 
-## Descriptive statistics separately for each group
+## 分組描述統計
 
 It is very commonly the case that you find yourself needing to look at descriptive statistics broken down by some grouping variable. This is pretty easy to do in jamovi. For instance, let's say I want to look at the descriptive statistics for some clinical trial data, broken down separately by therapy type. This is a new data set, one that you've never seen before. The data is stored in the clinicaltrial.csv file and we'll use it a lot later on in @sec-Comparing-several-means-one-way-ANOVA (you can find a complete description of the data at the start of that chapter). Let's load it and see what we've got (@fig-fig4-13):
 
@@ -359,13 +359,13 @@ What if you have multiple grouping variables? Suppose you want to look at the av
 knitr::include_graphics("images/fig4-14.png")
 ```
 
-## Standard scores {#sec-Standard-scores}
+## 標準分數 {#sec-Standard-scores}
 
 Suppose my friend is putting together a new questionnaire intended to measure "grumpiness". The survey has $50$ questions which you can answer in a grumpy way or not. Across a big sample (hypothetically, let's imagine a million people or so!) the data are fairly normally distributed, with the mean grumpiness score being $17$ out of $50$ questions answered in a grumpy way, and the standard deviation is $5$. In contrast, when I take the questionnaire I answer $35$ out of $50$ questions in a grumpy way. So, how grumpy am I? One way to think about it would be to say that I have grumpiness of $\frac{35}{50}$, so you might say that I'm 70% grumpy. But that's a bit weird, when you think about it. If my friend had phrased her questions a bit differently people might have answered them in a different way, so the overall distribution of answers could easily move up or down depending on the precise way in which the questions were asked. So, I'm only 70% grumpy *with respect to this set of survey questions*. Even if it's a very good questionnaire this isn't very a informative statement.
 
 A simpler way around this is to describe my grumpiness by comparing me to other people. Shockingly, out of my friend's sample of $1,000,000$ people, only $159$ people were as grumpy as me (that's not at all unrealistic, frankly) suggesting that I'm in the top 0.016% of people for grumpiness. This makes much more sense than trying to interpret the raw data. This idea, that we should describe my grumpiness in terms of the overall distribution of the grumpiness of humans, is the qualitative idea that standardisation attempts to get at. One way to do this is to do exactly what I just did and describe everything in terms of percentiles. However, the problem with doing this is that "it's lonely at the top". Suppose that my friend had only collected a sample of $1000$ people (still a pretty big sample for the purposes of testing a new questionnaire, I'd like to add), and this time gotten, let's say, a mean of $16$ out of $50$ with a standard deviation of $5$. The problem is that almost certainly not a single person in that sample would be as grumpy as me.
 
-However, all is not lost. A different approach is to convert my grumpiness score into a **standard score**, also referred to as a z-score. The standard score is defined as the number of standard deviations above the mean that my grumpiness score lies. To phrase it in "pseudomaths" the standard score is calculated like this:
+However, all is not lost. A different approach is to convert my grumpiness score into a **標準分數(standard score)**, also referred to as a z-score. The standard score is defined as the number of standard deviations above the mean that my grumpiness score lies. To phrase it in "pseudomaths" the standard score is calculated like this:
 
 $$
 \text{standard score} = \frac{\text{raw score} - mean}{\text{standard deviation}}
@@ -385,7 +385,7 @@ What about the standard scores? Well, this is a little different. If we calculat
 
 [^04-descriptive-statistics-15]: Though some caution is usually warranted. It's not always the case that one standard deviation on variable A corresponds to the same "kind" of thing as one standard deviation on variable B. Use common sense when trying to determine whether or not the z scores of two variables can be meaningfully compared
 
-## Summary
+## 本章小結
 
 Calculating some basic descriptive statistics is one of the very first things you do when analysing real data, and descriptive statistics are much simpler to understand than inferential statistics, so like every other statistics textbook I've started with descriptives. In this chapter, we talked about the following topics:
 
