--- a/Epilogue.qmd
+++ b/Epilogue.qmd
@@ -1,4 +1,4 @@
-# Epilogue {.unnumbered}
+# 後記 {.unnumbered}
 
 > *"Begin at the beginning", the King said, very gravely, "and go on till you come to the end: then stop"* -- Lewis Carroll
 
